# Dorfplatformer-Timetravel

./: .gitignore  CMakeLists.txt  README.md  build-androi.ps1  build-android.ps1  build-local.ps1  build-local.sh  compile.cmd  firebase-realtime-database.rules.json  level store.txt  package-lock.json  package.json  platformer  platformer (copy)  platformer_mobile  sheet_config  test-server.js
.build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  cmake_install.cmake  platformer.sln  platformer.vcxproj  platformer.vcxproj.filters  platformer_icon.rc  sheet_config.vcxproj  sheet_config.vcxproj.filters
.build-msvc-check/: CMakeCache.txt
.build/Release/assets/: object_defs.json  textures.json
.build/Release/assets/Hardmode levels/: New name 1-59.txt  New name 10-59.txt  New name 36-59.txt  New name 40-59.txt
.build/Release/assets/Sheets/: DF_Back_4-uhd.plist  DF_Enitys-uhd.plist  DF_Main_menu-uhd.plist  DF_Menus-uhd.plist
.build/Release/assets/levels/: level_005.txt  level_006.txt  level_011.txt  level_020.txt  level_021.txt  level_026.txt  level_027.txt  level_028.txt  level_029.txt  level_031.txt  level_033.txt  level_041.txt  level_045.txt  level_049.txt  level_057.txt
.build/ccache/0/: stats
.build/ccache/0/7/: datadg48dttot4pk1loddb9vqe7vuu0R
.build/ccache/0/b/: 44djoqeu8qjmhd02ul7ggp750lstp1oR
.build/ccache/0/c/: 20nhfo7ng74dq4hjq3vf1hjf33cvcrsR
.build/ccache/1/: stats
.build/ccache/1/2/: 228db7okvnvsji8sqcgdvdjgd1175u2R
.build/ccache/1/7/: 46mkltmivaak1380go706nkfdc06p24M
.build/ccache/1/d/: 1d7ikt1fl48rd49841f7mnrudmcsppaM
.build/ccache/3/: stats
.build/ccache/3/c/: 1d8e4ed56310i2mnhvfc83bn06riqfqM  ae7kh4ub0diciodu2vmact5b1ne2a5qM
.build/ccache/4/: stats
.build/ccache/4/2/: e5dfa3n558u0r63ec6blqr73u3asqkoR
.build/ccache/4/9/: d66555pe19na6r5hnp02g4v2pciaavoR
.build/ccache/4/a/: 60o6tm8ggdngp6t8a9si15h4fdb4v5aR  76e6grkdhlqvuk4jput01tr0ej7ap9cM
.build/ccache/5/: stats
.build/ccache/5/1/: 3e1hra7hhdjop9ud1e7vmq8nlfakteuR
.build/ccache/5/5/: d3r8ohrfobcurrtm396raom0damakqcR
.build/ccache/5/6/: cfkrmos2987s76lv6vgktqtv30l9qj8R
.build/ccache/6/: stats
.build/ccache/6/5/: 39mf2u0n5iicindp9pqpd2mio2rqd70M
.build/ccache/7/: stats
.build/ccache/8/: stats
.build/ccache/9/: stats
.build/ccache/a/: stats
.build/ccache/b/: stats
.build/ccache/c/: stats
.build/ccache/e/: stats
.build/ccache/f/: stats
.build/ccache/tmp/: cpp_stdout.tmp.PCzQ3Y.ii
.build/include/sdl3/: SDL.h  SDL_assert.h  SDL_asyncio.h  SDL_atomic.h  SDL_audio.h  SDL_begin_code.h  SDL_bits.h  SDL_blendmode.h  SDL_camera.h  SDL_clipboard.h  SDL_close_code.h  SDL_copying.h  SDL_cpuinfo.h  SDL_dialog.h  SDL_dlopennote.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamepad.h  SDL_gpu.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_image.h  SDL_init.h  SDL_intrin.h  SDL_iostream.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_main_impl.h  SDL_messagebox.h  SDL_metal.h  (+50 more)
.build/linux/: .build-scripts-hash  .platformer-flags  .sheet-flags
.build/linux-reuse/: .build-scripts-hash  .compile-flags
.build/linux-reuse/dep/src/: main.d
.build/platformer.dir/Release/: platformer.exe.recipe  platformer_icon.res
.build/sheet_config.dir/Release/: sheet_config.exe.recipe  sheet_config.ilk
.codex-ci-check/: CMakeCache.txt
.codex-config-check/: CMakeCache.txt
.codex-config-check-vs/: CMakeCache.txt
.codex-nx-check/: CMakeCache.txt  platformer_version.rc
.github/workflows/: android-build.yml  level-api-pages.yml
Android/: .gitignore  release-keystore.jks  settings.gradle.kts  signing.properties  signing.properties.example
Android/app/: build.gradle.kts  proguard-rules.pro
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
assets/: Level Numer List.txt  blockdefined.txt  client_settings.json  config.json  player_anim.json  sblockdefined.txt  textures.json
assets/Hardmode levels/: New name 18-59.txt  New name 3-59.txt  New name 32-59.txt  New name 35-59.txt  New name 43-59.txt  level_071.txt  level_088.txt  level_090.txt  level_096.txt  level_113.txt
assets/Sheets/: DF_Back_2-uhd.plist  DF_Background-uhd.plist  DF_Blocks-uhd (copy).png~  DF_Blocks-uhd.plist  DF_Blocks-uhd.png~  DF_Bosses-uhd (copy).plist  DF_Bosses-uhd.plist  DF_Pause-uhd.plist  DF_Player1-uhd.plist  Introcard-uhd.plist  end_sign-uhd.plist
assets/levels/: level_001.txt  level_004.txt  level_007.txt  level_009.txt  level_015.txt  level_018.txt  level_022.txt  level_038.txt  level_039.txt  level_068.txt  level_105.txt  level_106.txt  level_109.txt  level_116.txt  levels.json
assets/menus/: online_levels_menu.json  settings_menu.json
build-Windows/: CMakeCache.txt
build-codex-check/: CMakeCache.txt
cmake/: BuildInfo.h.in  CopyOptionalMixerDlls.cmake  StageWindowsBundle.cmake  WindowsAppManifest.xml.in  WindowsVersionResource.rc.in
installer/windows/: df-platformer.iss  update-manifest.example.json
pages/: account-manager.js  api.json  index.html  level-api.js  theme.css
src/: AndroidAudioBridge.cpp  AndroidAudioBridge.h  AndroidEntrypoints.cpp  AssetPath.cpp  AssetPath.h  AudioSystem.cpp  AudioSystem.h  CrashReporter.cpp  CrashReporter.h  FrontendMenu.cpp  FrontendMenu.h  GameApp.cpp  GameApp.h  GameSupport.cpp  GameSupport.h  InputSystem.h  LevelLoader.cpp  LevelLoader.h  LevelManager.cpp  LevelManager.h  LevelSelect.cpp  LevelSelect.h  ParallaxRenderer.cpp  ParallaxRenderer.h  Player.h  PlayerController.cpp  PlayerController.h  SheetConfigTool.cpp  TextRenderer.cpp  TextRenderer.h  TileMap.cpp  TileMap.h  UiScale.h  WindowsLauncher.cpp  WindowsTrayApp.cpp  WindowsUpdater.cpp  World3PatternBackground.cpp  World3PatternBackground.h  main.cpp
src/main_parts/: MainPart01.inl  MainPart02.inl  MainPart03.inl  MainPart04.inl  MainPart05.inl  MainPart06.inl  MainPart07.inl  MainPart08.inl  MainPart09.inl  MainPart10.inl  MainPart11.inl  MainPart12.inl
(+126 files in other folders)
